docs: fix issue with sidebar not showing on mobile
- Added `backdrop-filter: none !important;` to `.navbar-sidebar--show`
to resolve issue regarding sidebar not showing
- https://github.com/facebook/docusaurus/issues/6996#issuecomment-1312615163

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -202,6 +202,15 @@
   border-bottom: 1px solid rgba(37, 99, 235, 0.1);
 }
 
+.navbar-sidebar--show {
+  /* https://github.com/facebook/docusaurus/issues/6996#issuecomment-1312615163 */
+  backdrop-filter: none !important;
+}
+
+.navbar-sidebar {
+  background: var(--ifm-background-surface-color);
+}
+
 [data-theme='dark'] .navbar {
   background: linear-gradient(
     110deg,
